--- a/views/users/detail.ejs
+++ b/views/users/detail.ejs
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %></title>
-    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <%- include('../components/navbar.ejs') %>
-    <h1>hello <%= username %></h1>
-    <%- include('../components/footer.ejs') %>
+    <fieldset>
+      <legend>Detail User</legend>
+      <p><%= name %></p>
+      <p><%= email %></p>
+    </fieldset>
+    <a href="/users">kembali</a>
   </body>
 </html>
