--- a/views/users/form_add.ejs
+++ b/views/users/form_add.ejs
@@ -11,8 +11,8 @@
     <h1>Tambah Data User</h1>
     <form action="/users" method="POST">
       <div>
-        <label for="name">name</label>
-        <input type="text" name="name" id="name" placeholder="nama baru" />
+        <label for="nama">name</label>
+        <input type="text" name="nama" id="nama" placeholder="nama baru" />
       </div>
       <div>
         <label for="email">Email</label>
