--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -13,7 +13,7 @@
     <% if(users.length > 0) { %>
     <ul>
       <% users.forEach((user) => { %>
-      <li><%= user.name %> | <%= user.email %> | <a href="/users/detail/<%= user.id %>">detail</a></li>
+      <li><%= user.nama %> | <%= user.email %> | <a href="/users/detail/<%= user.id %>">detail</a></li>
       <% }) %>
     </ul>
     <% } else { %>
